--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -36,4 +36,5 @@ $global-arial-regular: "ArialMT-Regular";
 $global-drugs-regular: "Drugs-Regular";
 
 @import "partials/home";
+@import "partials/mob-navbar";
 
