--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -7,6 +7,13 @@ ul, p, h1, h2, h3, h4, h5, h6 {
 body {
   font-size: 18px;
 }
+.overlay {
+  //background-color: rgba(0,0,0,0.7);
+  background: linear-gradient(to left, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.1)100%);
+  height:100%;
+  position: absolute;
+  width: 100%;
+}
 
 @font-face {
   font-family: "ArialMT-Regular";
