--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -14,6 +14,14 @@ body {
   position: absolute;
   width: 100%;
 }
+.arrow-down {
+  position: absolute;
+  bottom: 0;
+  z-index: 999;
+  padding-bottom: 22px;
+  text-align: center;
+  width: 100%;
+}
 
 @font-face {
   font-family: "ArialMT-Regular";
@@ -42,6 +50,11 @@ body {
 $global-arial-regular: "ArialMT-Regular";
 $global-drugs-regular: "Drugs-Regular";
 
+
+//import partials
+
 @import "partials/home";
 @import "partials/mob-navbar";
+@import "partials/video-block";
+
 
