--- a/css/scss/partials/mob-navbar.scss
+++ b/css/scss/partials/mob-navbar.scss
@@ -9,7 +9,6 @@
     border: none;
     outline: none;
     padding: 0;
-
   }
 
   .nav-icon1 {
@@ -90,9 +89,15 @@
   margin-top: 68px;
   position: fixed;
   right: 11%;
+  .navbar-nav {
+    margin: 0;
+  }
 
   .nav-item:last-child {
-    margin: 130px 5px 0 60px;
+    margin-top: 115px;
+    position: relative;
+    right: -60%;
+    width: 35%;
     a svg {
       font-size: 36px;
       margin-top: 10px;
