Vertical mobile done

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -55,6 +55,8 @@ $global-drugs-regular: "Drugs-Regular";
 
 @import "partials/home";
 @import "partials/mob-navbar";
-@import "partials/video-block";
+@import "partials/slider-block";
+@import "partials/contact";
+@import "partials/footer";
 
 
