--- a/css/scss/partials/slider-block.scss
+++ b/css/scss/partials/slider-block.scss
@@ -14,7 +14,7 @@
   background-color: transparent;
   border-radius: 100%;
 }
-.video-btn {
+.slider-btn {
   width: 76px;
   height: 32px;
   line-height: 32px;
@@ -26,7 +26,7 @@
   font-size: 14px;
   text-align: center;
   color: #ffffff;
-  background: linear-gradient(to left,rgba(255,255,255,.0) 0%,rgba(255,255,255,0.1) 100%);
+  background: linear-gradient(to left,rgba(255,255,255,.0) 0%,rgba(255,255,255,0.3) 100%);
   z-index: 9999;
   &:active {
     text-decoration: none;
@@ -37,3 +37,9 @@
     color: #ffffff;
   }
 }
+.photo-btn {
+  right: 0;
+  margin: 0 15px 0 0;
+}
+
+
