--- a/css/scss/partials/slider-block.scss
+++ b/css/scss/partials/slider-block.scss
@@ -26,7 +26,7 @@
   font-size: 14px;
   text-align: center;
   color: #ffffff;
-  background: linear-gradient(to left,rgba(255,255,255,.0) 0%,rgba(255,255,255,0.3) 100%);
+  background: linear-gradient(to left,rgba(255,255,255,.0) 0%,rgba(255,255,255,0.3q) 100%);
   z-index: 9999;
   &:active {
     text-decoration: none;
