--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -4,14 +4,34 @@
 ul, p, h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+a:hover {
+    text-decoration: none;
+}
+a[href^=tel] {
+  text-decoration:inherit;
+  color: inherit;
+}
 body {
   font-size: 18px;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 .overlay {
-  //background-color: rgba(0,0,0,0.7);
-  background: linear-gradient(to left, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.1)100%);
   height:100%;
-  position: absolute;
+  width: 100%;
+  position: fixed;
+  z-index: 9999;
+  background: linear-gradient(to left, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.1)100%);
+}
+.one, .two, .three {
+  display: block;
+  position: relative;
   width: 100%;
 }
 .arrow-down {
