touch move test

--- a/css/scss/partials/contact.scss
+++ b/css/scss/partials/contact.scss
@@ -9,7 +9,7 @@
   z-index: -1;
 }
 .contact-description {
-  margin: 110px auto 91px;
+  margin: 40% auto 91px;
   max-width: 200px;
   font-family: $global-drugs-regular;
   font-size: 11px;
