--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -22,17 +22,20 @@ body {
   width: 100%;
   height: 100%;
 }
+.pages-screen {
+  width: 100%;
+  height: 100vh;
+  background: url(../img/mob/contact-screen.png) no-repeat;
+  background-size: 100% 100%;
+  z-index: -1;
+  color: #ffffff;
+}
 .overlay {
   height:100%;
   width: 100%;
   position: fixed;
   z-index: 9999;
   background: linear-gradient(to left, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.1)100%);
-}
-.one, .two, .three {
-  display: block;
-  position: relative;
-  width: 100%;
 }
 .arrow-down {
   position: absolute;
@@ -78,5 +81,7 @@ $global-drugs-regular: "Drugs-Regular";
 @import "partials/slider-block";
 @import "partials/contact";
 @import "partials/footer";
+
+@import "partials/video";
 
 
