--- a/css/scss/partials/footer.scss
+++ b/css/scss/partials/footer.scss
@@ -1,3 +1,10 @@
+.footer {
+  text-align: center;
+  position: absolute;
+  bottom: 50px;
+  left: 0;
+  right: 0;
+}
 .footer-link {
   color: #ffffff;
   font-size: 30px;
