--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -25,9 +25,6 @@ body {
 .pages-screen {
   width: 100%;
   height: 100vh;
-  background: url(../img/mob/contact-screen.png) no-repeat;
-  background-size: 100% 100%;
-  z-index: -1;
   color: #ffffff;
 }
 .overlay {
@@ -83,5 +80,5 @@ $global-drugs-regular: "Drugs-Regular";
 @import "partials/footer";
 
 @import "partials/video";
-
+@import "partials/photo";
 
