--- a/css/scss/partials/footer.scss
+++ b/css/scss/partials/footer.scss
@@ -1,9 +1,6 @@
 .footer {
   text-align: center;
-  position: absolute;
-  bottom: 50px;
-  left: 0;
-  right: 0;
+  padding: 25px;
 }
 .footer-link {
   color: #ffffff;
