--- a/css/scss/partials/slider-block.scss
+++ b/css/scss/partials/slider-block.scss
@@ -5,9 +5,11 @@
   height: 100vh;
 }
 .carousel-inner .item .carousel-img {
-  width: 100%;
-  height: 100%;
   object-fit: cover;
+  height: 100%;
+}
+.carousel-img {
+  width: 100%;
 }
 .carousel-indicators {
   bottom: 58px;
